--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 authors = ["LunaStev <lunastev@gurmstudis.com>"]
 description = "A simple and flexible Rust library for styling terminal output with color and text formatting. Supports RGB/HEX colors, text styles (bold, italic, underline, etc.), and background colors with a chainable API."
 license = "MPL-2.0"
-repository = "https://github.com/LunaStev/colorex"
+repository = "https://github.com/colorex-lbrary/colorex"
 publish = true
 
 [lib]
